[gd_scene load_steps=65 format=3 uid="uid://dp4umvlwbdhue"]

[ext_resource type="Script" uid="uid://xan02qsdu5va" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://c4qxa0vkvaoke" path="res://scripts/monster_manager.gd" id="2_0wfyh"]
[ext_resource type="Texture2D" uid="uid://degs83btr7lqv" path="res://bg/Comp000.png" id="2_t5ykj"]
[ext_resource type="Texture2D" uid="uid://dwjga3ww78nbo" path="res://sprites/placeholders/placeholders/bg_walls.png" id="3_choun"]
[ext_resource type="Texture2D" uid="uid://crshbnrq7nixw" path="res://bg/Comp001.png" id="3_e755i"]
[ext_resource type="Script" uid="uid://dos3qhffr4v0a" path="res://addons/rhythm_notifier/rhythm_notifier.gd" id="4_jyhfs"]
[ext_resource type="Texture2D" uid="uid://bfqmrhnljprl5" path="res://bg/Comp002.png" id="4_ro3en"]
[ext_resource type="Texture2D" uid="uid://diwap3tqqqfv4" path="res://sprites/placeholders/placeholders/boat_body.png" id="4_ya4ey"]
[ext_resource type="Texture2D" uid="uid://cg34cqmbkf2ps" path="res://sprites/placeholders/placeholders/boat_idle.png" id="5_eb6dy"]
[ext_resource type="Texture2D" uid="uid://cmp2rplxkat4s" path="res://bg/Comp003.png" id="5_od4ux"]
[ext_resource type="PackedScene" uid="uid://7dgsbdt2ilfq" path="res://scenes/game_over.tscn" id="5_tbgi4"]
[ext_resource type="FontFile" uid="uid://q5xkve2t7wlo" path="res://fonts/Carnevalee Freakshow.ttf" id="5_tefeu"]
[ext_resource type="Texture2D" uid="uid://pq3tco2d72iy" path="res://sprites/placeholders/placeholders/chara_player.png" id="6_trceg"]
[ext_resource type="Texture2D" uid="uid://ce7leb58dopmm" path="res://bg/Comp004.png" id="6_xhfw6"]
[ext_resource type="Texture2D" uid="uid://di8nv7tqrwjx6" path="res://bg/Comp005.png" id="7_1epgm"]
[ext_resource type="Texture2D" uid="uid://s8jejuk5kq1u" path="res://sprites/placeholders/placeholders/chara_date.png" id="7_a8y0u"]
[ext_resource type="Script" uid="uid://dlojhoj0vn1gb" path="res://scripts/audio_slider.gd" id="7_o6xl0"]
[ext_resource type="Script" uid="uid://ctwu0qej2jku2" path="res://scripts/options.gd" id="7_tipki"]
[ext_resource type="Texture2D" uid="uid://b3t8i4mi5kxpr" path="res://bg/Comp006.png" id="8_152kg"]
[ext_resource type="Texture2D" uid="uid://df78num2uu6rh" path="res://sprites/light.png" id="8_vxglm"]
[ext_resource type="AudioStream" uid="uid://ccho04v8juv6h" path="res://audio/testtrack_120_verfinal.wav" id="9_og1vs"]
[ext_resource type="Texture2D" uid="uid://blmp425ct415c" path="res://bg/Comp007.png" id="9_r4e17"]
[ext_resource type="AudioStream" uid="uid://cuaw3ywiet6b2" path="res://audio/arrow_shoot_sfx_alt.wav" id="10_og1vs"]
[ext_resource type="Texture2D" uid="uid://bq8tduoemcj0g" path="res://bg/Comp008.png" id="10_y57op"]
[ext_resource type="Texture2D" uid="uid://bjye5et3eg5qp" path="res://bg/Comp009.png" id="11_mlv25"]
[ext_resource type="Texture2D" uid="uid://b83141tufb0vu" path="res://sprites/Patience Meter/PM Empty.png" id="11_muem4"]
[ext_resource type="AudioStream" uid="uid://v0fk00ya1s8a" path="res://audio/gameover_ver1.wav" id="11_yq6so"]
[ext_resource type="Texture2D" uid="uid://x8yxc3hrhdsj" path="res://bg/Comp010.png" id="12_a82wo"]
[ext_resource type="Texture2D" uid="uid://bysnjnb1vsi8w" path="res://sprites/Patience Meter/PM Overlay.png" id="12_dp3eg"]
[ext_resource type="Texture2D" uid="uid://c5yp3bda3kfg8" path="res://sprites/Patience Meter/PM Filled.png" id="13_0ld40"]
[ext_resource type="Texture2D" uid="uid://b2ga25oqdea6k" path="res://bg/Comp011.png" id="13_gdvew"]
[ext_resource type="Texture2D" uid="uid://uq5kqbqlstie" path="res://sprites/Patience Meter/Icon Neutral.png" id="14_0ld40"]
[ext_resource type="Texture2D" uid="uid://ca0enl5j2cw3w" path="res://bg/Comp012.png" id="14_kjtvk"]
[ext_resource type="Texture2D" uid="uid://d16j87d5xahws" path="res://bg/Comp013.png" id="15_xrs0c"]
[ext_resource type="FontFile" uid="uid://b6itnxdi4g5ec" path="res://fonts/Bebas_Neue/BebasNeue-Regular.ttf" id="16_0ld40"]
[ext_resource type="Texture2D" uid="uid://cycp83q8bdas0" path="res://bg/Comp014.png" id="16_xljpf"]
[ext_resource type="Texture2D" uid="uid://dq7c3443dcil3" path="res://bg/Comp015.png" id="17_j4bwh"]
[ext_resource type="Texture2D" uid="uid://ckwccfen86fqy" path="res://bg/Comp016.png" id="18_ksmap"]
[ext_resource type="Texture2D" uid="uid://brd3nk62sdhci" path="res://sprites/Pause Menu/Pause Menu BG.png" id="18_yc10j"]
[ext_resource type="Texture2D" uid="uid://gejhfqlybt4" path="res://bg/Comp017.png" id="19_ygd8o"]
[ext_resource type="Texture2D" uid="uid://bdksperag315e" path="res://bg/Comp018.png" id="20_2s0kr"]
[ext_resource type="FontFile" uid="uid://buho8mxtdbp3r" path="res://fonts/Gaegu-Bold.ttf" id="20_jscy8"]
[ext_resource type="FontFile" uid="uid://u1frrkgccc5x" path="res://fonts/Atkinson_Hyperlegible_Next/static/AtkinsonHyperlegibleNext-Regular.ttf" id="21_pm3ni"]
[ext_resource type="Texture2D" uid="uid://cx8tqokklpeu4" path="res://bg/Comp019.png" id="21_xaipn"]
[ext_resource type="Texture2D" uid="uid://7m7by0ba1rbp" path="res://bg/Comp020.png" id="22_ndrjj"]
[ext_resource type="Texture2D" uid="uid://dvr7jdwhqyui" path="res://sprites/Pause Menu/Slider Button Idle.png" id="23_2wyq8"]
[ext_resource type="Texture2D" uid="uid://4mbp5crumg5u" path="res://bg/Comp021.png" id="23_ih3m7"]
[ext_resource type="Texture2D" uid="uid://bgrjr7ka5pv1m" path="res://bg/Comp022.png" id="24_11yus"]
[ext_resource type="Texture2D" uid="uid://bt4qfq2jn7aks" path="res://sprites/Pause Menu/Slider Button Hover.png" id="24_vxglm"]
[ext_resource type="Texture2D" uid="uid://4cfbyqo565jx" path="res://bg/Comp023.png" id="25_b6ruc"]
[ext_resource type="Texture2D" uid="uid://bwtjae5k58pw2" path="res://sprites/Controls.png" id="26_2f3dj"]
[ext_resource type="FontFile" uid="uid://cylphn78l5se6" path="res://fonts/Atkinson_Hyperlegible_Next/static/AtkinsonHyperlegibleNext-Bold.ttf" id="26_2wyq8"]
[ext_resource type="Texture2D" uid="uid://xg1iini5jvbp" path="res://bg/Comp024.png" id="26_155or"]
[ext_resource type="Texture2D" uid="uid://dt05tmhfctr81" path="res://bg/Comp025.png" id="27_vtx2l"]
[ext_resource type="Texture2D" uid="uid://bsgqsce3mwumu" path="res://bg/Comp026.png" id="28_63lxy"]
[ext_resource type="Texture2D" uid="uid://tnhl0odugcnk" path="res://bg/Comp027.png" id="29_fjhjs"]
[ext_resource type="Texture2D" uid="uid://c4tq5x3040kf7" path="res://bg/Comp028.png" id="30_bfu41"]
[ext_resource type="Texture2D" uid="uid://fvw8sg8mgjg8" path="res://sprites/Ending/1.png" id="30_fv21b"]
[ext_resource type="Script" uid="uid://iu63atnw2uah" path="res://scripts/ending.gd" id="30_tel4y"]
[ext_resource type="Texture2D" uid="uid://clk3kxugut82h" path="res://bg/Comp029.png" id="31_r4ag1"]
[ext_resource type="Texture2D" uid="uid://o4ub4epua8ly" path="res://bg/Comp030.png" id="32_v0wtd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_sgvw8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_t5ykj")
}, {
"duration": 1.0,
"texture": ExtResource("3_e755i")
}, {
"duration": 1.0,
"texture": ExtResource("4_ro3en")
}, {
"duration": 1.0,
"texture": ExtResource("5_od4ux")
}, {
"duration": 1.0,
"texture": ExtResource("6_xhfw6")
}, {
"duration": 1.0,
"texture": ExtResource("7_1epgm")
}, {
"duration": 1.0,
"texture": ExtResource("8_152kg")
}, {
"duration": 1.0,
"texture": ExtResource("9_r4e17")
}, {
"duration": 1.0,
"texture": ExtResource("10_y57op")
}, {
"duration": 1.0,
"texture": ExtResource("11_mlv25")
}, {
"duration": 1.0,
"texture": ExtResource("12_a82wo")
}, {
"duration": 1.0,
"texture": ExtResource("13_gdvew")
}, {
"duration": 1.0,
"texture": ExtResource("14_kjtvk")
}, {
"duration": 1.0,
"texture": ExtResource("15_xrs0c")
}, {
"duration": 1.0,
"texture": ExtResource("16_xljpf")
}, {
"duration": 1.0,
"texture": ExtResource("17_j4bwh")
}, {
"duration": 1.0,
"texture": ExtResource("18_ksmap")
}, {
"duration": 1.0,
"texture": ExtResource("19_ygd8o")
}, {
"duration": 1.0,
"texture": ExtResource("20_2s0kr")
}, {
"duration": 1.0,
"texture": ExtResource("21_xaipn")
}, {
"duration": 1.0,
"texture": ExtResource("22_ndrjj")
}, {
"duration": 1.0,
"texture": ExtResource("23_ih3m7")
}, {
"duration": 1.0,
"texture": ExtResource("24_11yus")
}, {
"duration": 1.0,
"texture": ExtResource("25_b6ruc")
}, {
"duration": 1.0,
"texture": ExtResource("26_155or")
}, {
"duration": 1.0,
"texture": ExtResource("27_vtx2l")
}, {
"duration": 1.0,
"texture": ExtResource("28_63lxy")
}, {
"duration": 1.0,
"texture": ExtResource("29_fjhjs")
}, {
"duration": 1.0,
"texture": ExtResource("30_bfu41")
}, {
"duration": 1.0,
"texture": ExtResource("31_r4ag1")
}, {
"duration": 1.0,
"texture": ExtResource("32_v0wtd")
}],
"loop": true,
"name": &"default",
"speed": 60.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wfyh"]
size = Vector2(453, 339.4375)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_og1vs"]
content_margin_top = 14.0
bg_color = Color(0.27014354, 0.6707075, 0.6759358, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.9515795, 0.95157963, 0.9515795, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 10

[node name="Main" type="Node2D"]
script = ExtResource("1_o5qli")
patience_decay_rate = 0.75

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelBG" type="Node2D" parent="."]

[node name="Background" type="AnimatedSprite2D" parent="LevelBG"]
position = Vector2(960, 540)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_sgvw8")
autoplay = "default"

[node name="BG_Walls" type="Sprite2D" parent="LevelBG"]
visible = false
position = Vector2(960, 540)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_choun")

[node name="LeftArea" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2(430.5, 909)
shape = SubResource("RectangleShape2D_0wfyh")

[node name="ColorRect" type="TextureRect" parent="LeftArea/CollisionShape2D"]
visible = false
modulate = Color(1, 1, 1, 0.627451)
offset_left = -378.5
offset_top = -108.0
offset_right = 122.0
offset_bottom = 329.0
rotation = -0.56548667
mouse_filter = 2
texture = ExtResource("8_vxglm")

[node name="RightArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
position = Vector2(1480, 913)
shape = SubResource("RectangleShape2D_0wfyh")

[node name="ColorRect" type="TextureRect" parent="RightArea/CollisionShape2D"]
modulate = Color(1, 1, 1, 0.627451)
offset_left = 82.0
offset_top = -452.0
offset_right = 601.0
offset_bottom = 33.28125
rotation = 0.6736971
mouse_filter = 2
texture = ExtResource("8_vxglm")
flip_h = true

[node name="MonsterManager" type="Node2D" parent="."]
script = ExtResource("2_0wfyh")

[node name="BulletManager" type="Node2D" parent="."]

[node name="Level" type="Node2D" parent="."]

[node name="Swan_Head" type="Sprite2D" parent="Level"]
position = Vector2(960, 540)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_eb6dy")

[node name="Boat_Body" type="Sprite2D" parent="Level"]
position = Vector2(960, 540)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ya4ey")

[node name="Char_Player" type="Sprite2D" parent="Level"]
position = Vector2(960, 540)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_trceg")

[node name="Char_Date" type="Sprite2D" parent="Level"]
position = Vector2(1175, 920)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_a8y0u")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_og1vs")
volume_db = -5.0
bus = &"music"

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("11_yq6so")
volume_db = -5.0
bus = &"music"

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("10_og1vs")
volume_db = -5.0
bus = &"sfx"

[node name="RhythmNotifier" type="Node" parent="." node_paths=PackedStringArray("audio_stream_player")]
script = ExtResource("4_jyhfs")
bpm = 120.0
beat_length = 0.5
audio_stream_player = NodePath("../AudioStreamPlayer")
running = true
metadata/_custom_type_script = "uid://dos3qhffr4v0a"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = 944.0
offset_top = 524.0
offset_right = 984.0
offset_bottom = 564.0

[node name="ShootTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="PatienceTimer" type="Timer" parent="."]
autostart = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Patience" type="TextureProgressBar" parent="UI"]
unique_name_in_owner = true
process_mode = 1
layout_mode = 0
offset_left = 18.0
offset_top = 34.0
offset_right = 506.0
offset_bottom = 216.0
accessibility_name = "Patience"
step = 0.5
value = 74.0
texture_under = ExtResource("11_muem4")
texture_over = ExtResource("12_dp3eg")
texture_progress = ExtResource("13_0ld40")

[node name="DateIcon" type="TextureRect" parent="UI/Patience"]
layout_mode = 0
offset_left = 30.0
offset_top = -21.0
offset_right = 187.0
offset_bottom = 148.0
texture = ExtResource("14_0ld40")

[node name="Combo" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.0
offset_top = 19.0
offset_right = 114.0
offset_bottom = 101.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("5_tefeu")
theme_override_font_sizes/font_size = 80
text = "1"
horizontal_alignment = 1

[node name="ComboText" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -111.0
offset_top = 111.0
offset_right = 116.0
offset_bottom = 193.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("16_0ld40")
theme_override_font_sizes/font_size = 36
text = "Combo"
horizontal_alignment = 1

[node name="Score" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 199.0
offset_top = 113.0
offset_right = 376.0
offset_bottom = 193.0
theme_override_colors/font_color = Color(0.9428228, 0.94282264, 0.94282264, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("16_0ld40")
theme_override_font_sizes/font_size = 48
text = "0 pts"
horizontal_alignment = 2

[node name="Options" type="TextureRect" parent="UI"]
process_mode = 3
visible = false
custom_minimum_size = Vector2(520, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -347.5
offset_top = -465.0
offset_right = 347.5
offset_bottom = 485.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("18_yc10j")
script = ExtResource("7_tipki")

[node name="TextureRect" type="TextureRect" parent="UI/Options"]
layout_mode = 0
offset_left = -610.0
offset_top = -71.0
offset_right = 1310.0
offset_bottom = 1009.0
texture = ExtResource("26_2f3dj")

[node name="MusicVolume" type="Label" parent="UI/Options"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 0
offset_left = 188.0
offset_top = 490.0
offset_right = 478.0
offset_bottom = 526.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("20_jscy8")
theme_override_font_sizes/font_size = 35
text = "music volume"

[node name="MarginContainer" type="MarginContainer" parent="UI/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 250

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Options/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Resume" type="Button" parent="UI/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_fonts/font = ExtResource("20_jscy8")
theme_override_font_sizes/font_size = 35
text = "Resume"
flat = true

[node name="Restart" type="Button" parent="UI/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_fonts/font = ExtResource("20_jscy8")
theme_override_font_sizes/font_size = 35
text = "Restart"
flat = true

[node name="Quit" type="Button" parent="UI/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_fonts/font = ExtResource("20_jscy8")
theme_override_font_sizes/font_size = 35
text = "Quit"
flat = true

[node name="DefaultFont" type="Button" parent="UI/Options/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_colors/font_hover_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_fonts/font = ExtResource("20_jscy8")
theme_override_font_sizes/font_size = 35
text = "Default"
flat = true

[node name="AltFont" type="Button" parent="UI/Options/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_colors/font_hover_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_fonts/font = ExtResource("21_pm3ni")
theme_override_font_sizes/font_size = 30
text = "Atkitson Hyperlegible"
flat = true

[node name="MusicSlider" type="HSlider" parent="UI/Options/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/grabber_offset = -32
theme_override_icons/grabber = ExtResource("23_2wyq8")
theme_override_icons/grabber_highlight = ExtResource("24_vxglm")
theme_override_styles/slider = SubResource("StyleBoxFlat_og1vs")
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("7_o6xl0")
bus_name = "music"

[node name="CheckBox" type="CheckBox" parent="UI/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("20_jscy8")
theme_override_font_sizes/font_size = 32
text = "Fullscreen?"

[node name="GameOver" parent="." instance=ExtResource("5_tbgi4")]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Panel" parent="GameOver" index="0"]
modulate = Color(1, 1, 1, 1)

[node name="TextureRect" parent="GameOver" index="1"]
offset_top = -390.0
offset_bottom = 255.0

[node name="Restart" parent="GameOver" index="2"]
offset_left = -107.5
offset_top = 210.0
offset_right = 107.5
offset_bottom = 282.0

[node name="Quit" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -255.0
offset_right = 63.0
offset_bottom = -183.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_fonts/font = ExtResource("26_2wyq8")
theme_override_font_sizes/font_size = 48
text = "QUIT
"
flat = true

[node name="Ending" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("30_tel4y")

[node name="TextureRect" type="TextureRect" parent="Ending"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("30_fv21b")

[node name="Label" type="Label" parent="Ending"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -372.0
offset_top = -60.0
offset_bottom = -19.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.043039158, 0.04303915, 0.04303915, 1)
theme_override_fonts/font = ExtResource("20_jscy8")
theme_override_font_sizes/font_size = 32
text = "Press Space to Continue..."

[connection signal="body_entered" from="LeftArea" to="." method="body_entered"]
[connection signal="body_entered" from="RightArea" to="." method="body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="pressed" from="UI/Options/MarginContainer/VBoxContainer/Resume" to="UI/Options" method="_on_resume_pressed"]
[connection signal="pressed" from="UI/Options/MarginContainer/VBoxContainer/Restart" to="." method="restart"]
[connection signal="pressed" from="UI/Options/MarginContainer/VBoxContainer/Quit" to="UI/Options" method="_on_quit_pressed"]
[connection signal="pressed" from="UI/Options/MarginContainer/VBoxContainer/CheckBox" to="UI/Options" method="_on_check_box_pressed"]
[connection signal="pressed" from="GameOver/Restart" to="." method="restart"]
[connection signal="pressed" from="GameOver/Quit" to="UI/Options" method="_on_quit_pressed"]
[connection signal="visibility_changed" from="Ending" to="Ending" method="_on_visibility_changed"]

[editable path="GameOver"]
